fix: Build and run appliction