@@ -2,6 +2,7 @@ package edu.ntnu.idi.idatt.boardgame;
 
 import java.util.List;
 import java.util.Random;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class Utils {
@@ -17,7 +18,7 @@ public class Utils {
         return IntStream.range(0, amount)
                 .map(i -> rand.nextInt(6) + 1)
                 .boxed()
-                .toList();
+                .collect(Collectors.toList());
     }
 
 }
